# example_cmake1.0

Cmake/: Cmake.md  CreateProjectWithLibraries.md  CreateProjectWithOneLibrary.md  CreateProjectWithSubDirectory.md  CreateSimpleProject.md  StartDebugCmakeWithVScode.md  add_executable.md  add_library.md  add_subdirectory.md  cmake_minimum_required.md  include_directories.md  launch.json.md  project.md  set.md  target_include_directories.md  target_link_libraries.md  tasks.json.md
Cmake/example1/: CmakeLists.txt
Cmake/example2/: CMakeLists.txt
Cmake/example2/src/: foo.cpp  main.cpp
Cmake/example3/: CMakeLists.txt
Cmake/example3/mylib/: CMakeLists.txt
Cmake/example3/mylib/src/: lib.cpp
Cmake/example3/src/: main.cpp
Cmake/example4/: CMakeLists.txt
Cmake/example4/app/: CMakeLists.txt
Cmake/example4/app/src/: main.cpp
Cmake/example4/libA/: CMakelists.txt
Cmake/example4/libA/include/: libA.hpp
Cmake/example4/libA/src/: libA.cpp
Cmake/example4/libB/: CMakeLists.txt
Cmake/example4/libB/include/: libB.hpp
Cmake/example4/libB/src/: libB.cpp
Cmake/example4/libC/: CMakelists.txt
Cmake/example4/libC/include/: libC.hpp
Cmake/example4/libC/src/: libC.cpp
Cmake/example4/libD/: CMakeLists.txt
Cmake/example4/libD/include/: libD.hpp
Cmake/example4/libD/src/: libD.cpp
